--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.scss
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.scss
@@ -52,16 +52,16 @@ $color-rosa: #FF8087;
 
 /*ORDER LIST TABLE*/
 
-.pedidos{
-  color: black;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  align-self: flex-start;
-  margin-left: 19%;
-  font-size: 35px;
-  border-bottom: 5px solid $color-melon;
-  padding-bottom: 5px;
-}
+// .pedidos{
+//   color: black;
+//   margin-top: 2rem;
+//   margin-bottom: 1rem;
+//   align-self: flex-start;
+//   margin-left: 19%;
+//   font-size: 35px;
+//   border-bottom: 5px solid $color-melon;
+//   padding-bottom: 5px;
+// }
 button{
   background-color: transparent;
   border: none;
