--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.scss
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.scss
@@ -235,3 +235,17 @@ input[type=number] {
 .invalido-estado{
   color: $color-danger;
 }
+.eye{
+  display: flex;
+  align-items:center;
+  position: relative;
+  justify-content: center;
+}
+.iconEye{
+  color: $color-marron;
+  position: absolute;
+  right: 5px;
+  margin: 5px;
+  cursor: pointer;
+  margin-top: 8px;
+}
