--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -3,7 +3,7 @@
     <h2>Inicia Sesión</h2>
     <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin" [(ngModel)]="usuario.email">
     <div class="eye">
-      <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
+      <span class='iconEye' (click)="seePass()"><i class="fas fa-eye-slash"></i></span>
       <input type="password" placeholder="password" id="passLogin" class="passLogin" 
       [(ngModel)]="usuario.password">
       <!--<input type="password" placeholder="Contraseña" id="passLogin" class="passLogin" > -->
