--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -4,12 +4,12 @@
     <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin" [(ngModel)]="usuario.email">
     <div class="eye">
       <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
-      <input type="password" placeholder="password" id="passLogin" class="passLogin" 
+      <input type="password" placeholder="Password" id="passLogin" class="passLogin" 
       [(ngModel)]="usuario.password">
-      <!--<input type="password" placeholder="Contraseña" id="passLogin" class="passLogin" > -->
+    
     </div>
-    <a [class]="'forgetPassword'" (click)="resetPass()">Olvide mi contraseña</a>
-    <input type="submit"  routerLink="/" routerLinkActive="activebutton"  value="Ingresar" 
+    <a class="forgetPassword" (click)="resetPass()">Olvide mi contraseña</a>
+    <input type="submit"  routerLinkActive="activebutton"  value="Ingresar" class="buttonLogin"
     (click)="ingresar()">
   </div>
 </div> 
