Corrección de estilos

--- a/burgerQueen/src/app/ingreso/login/login.component.scss
+++ b/burgerQueen/src/app/ingreso/login/login.component.scss
@@ -37,9 +37,10 @@ $color-danger:#dc3545;
   background-size: cover;
 }
 
-h2{
+h4{
   color: $color-marron;
   font-weight: 400;
+  margin-bottom: 12px !important;
 }
 .emailLogin,
 .passLogin
@@ -52,6 +53,7 @@ h2{
   padding: 0.75rem;
   color: $color-gris;
   box-shadow: 3px 3px 3px gray;
+  margin-bottom: 0px !important;
 }
 .buttonLogin{
   display: block;
@@ -65,6 +67,7 @@ h2{
   color: $color-blanco;
   background-color: $color-marron;
   padding: 0.5rem;
+  font-size: 13px;
 }
 
 .forgetPassword{
@@ -87,6 +90,7 @@ h2{
   cursor: pointer;
   margin-top: 8px;
 }
+
 .emailLogin{
   background-image: url(../../../assets/imagenes/img-login-welcome/icon-email.png);
   background-position: 13rem;
