--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -1,15 +1,15 @@
 <div class="containerLogin" id="containerLogin">
   <div class="divLogin" id="divLogin">
-    <h2>Inicia Sesión</h2>
+    <h4>Inicia Sesión</h4>
     <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin" [(ngModel)]="usuario.email">
     <div class="eye">
       <span class='iconEye' (click)="seePass()"><i class="fas fa-eye-slash"></i></span>
-      <input type="password" placeholder="password" id="passLogin" class="passLogin" 
+      <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin" 
       [(ngModel)]="usuario.password">
       <!--<input type="password" placeholder="Contraseña" id="passLogin" class="passLogin" > -->
     </div>
     <a [class]="'forgetPassword'" (click)="resetPass()">Olvide mi contraseña</a>
-    <input type="submit"  routerLink="/" routerLinkActive="activebutton"  value="Ingresar" 
+    <input type="submit"  routerLink="/" routerLinkActive="activebutton"  value="Ingresar" class="buttonLogin"
     (click)="ingresar()">
   </div>
 </div> 
