--- a/burgerQueen/src/app/shared/navegador/navegador.component.scss
+++ b/burgerQueen/src/app/shared/navegador/navegador.component.scss
@@ -12,6 +12,7 @@ $color-rosa: #FF8087;
     flex-direction: column;
     justify-content: space-evenly;
     text-align: center;
+    padding: 0px;
     
     img{
         width: 50px;
