--- a/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.scss
+++ b/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.scss
@@ -81,6 +81,7 @@ thead{
     padding: 0.5rem;
     color: $color-marron;
     font-weight: 500;
+    text-align: center;
   
     p{
       font-size: 13px;
