validaciones login con sweet alert

--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="containerLogin" id="containerLogin">
   <div class="divLogin" id="divLogin">
-    <h2>Inicia Sesión</h2>
+    <h3>Inicia Sesión</h3>
     <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin" [(ngModel)]="usuario.email">
     <div class="eye">
       <span class='iconEye' (click)="seePass()"><i class="fas fa-eye-slash"></i></span>
-      <input type="password" placeholder="password" id="passLogin" class="passLogin" 
+      <input type="password" placeholder="Password" id="passLogin" class="passLogin" 
       [(ngModel)]="usuario.password">
     
     </div>
