--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.scss
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.scss
@@ -52,16 +52,6 @@ $color-rosa: #FF8087;
 
 /*ORDER LIST TABLE*/
 
-// .pedidos{
-//   color: black;
-//   margin-top: 2rem;
-//   margin-bottom: 1rem;
-//   align-self: flex-start;
-//   margin-left: 19%;
-//   font-size: 35px;
-//   border-bottom: 5px solid $color-melon;
-//   padding-bottom: 5px;
-// }
 button{
   background-color: transparent;
   border: none;
@@ -98,12 +88,14 @@ tr{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 97%;
+  width: 100%;
   padding: 4px;
 
   td{
     h4{
       text-align: center;
+      font-size: 15px;
+      font-weight: 700;
     }
   }
 }
