Sweet alerts - Toast alerts

--- a/burgerQueen/src/app/shared/navegador/navegador.component.html
+++ b/burgerQueen/src/app/shared/navegador/navegador.component.html
@@ -1,13 +1,8 @@
 <div class="navbar">
     <img src="../../../assets/imagenes/img-carta/logo2.svg">
-    <i class="fa-solid fa-user-large" (click)="usuariosRout()"></i>
-    <i class="fa-solid fa-utensils" (click)="cartaRout()"></i>
+    <i class="fa-solid fa-user-large" *ngIf="(rolUser == 'Administrador')" (click)="usuariosRout()"></i>
+    <i class="fa-solid fa-utensils" *ngIf="(rolUser == 'Mesero' || rolUser == 'Administrador')" (click)="cartaRout()"></i>
     <i class="fa-solid fa-receipt" (click)="pedidoRout()"></i>
     <i class="fa-solid fa-list-check" (click)="totalPedidosRout()"></i>
     <i class="fa-solid fa-right-from-bracket" (click)="onLogout()"></i>
 </div>
-
-<!--
-    3 - *ngIf="(rolUser == 'Administrador')"
-    4 - *ngIf="(rolUser == 'Mesero' || rolUser == 'Administrador')"
--->
