--- a/burgerQueen/src/app/cocinero/pedidos-cocinero/pedidos-cocinero.component.scss
+++ b/burgerQueen/src/app/cocinero/pedidos-cocinero/pedidos-cocinero.component.scss
@@ -22,6 +22,7 @@ $color-rosa: #FF8087;
   margin: 5vh 0vh;
   align-self: flex-start;
 }
+
 /*SUBTITLE*/
 
 .subtitle{
@@ -43,14 +44,9 @@ $color-rosa: #FF8087;
     border-style: none;
   }
 }
-button{
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  width: 20px;
-  font-size: 25px;
-  margin: 0.2rem;
-}
+
+/*TABLE*/
+
 .listaPedidos{
   flex-direction: column;
   display: flex;
@@ -61,11 +57,12 @@ button{
   overflow-x: hidden;
   height: 74vh;
 }
+
 tr{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 97%;
+  width: 100%;
   padding: 4px;
 
   td{
@@ -74,16 +71,30 @@ tr{
     }
   }
 }
+
+.quantity{
+  background-color: transparent;
+  border: none;
+  width: 20px;
+  font-size: 16px;
+  margin: 0.2rem;
+}
+
 img{
   width: 50px;
   height: 50px;
   margin: 5px;
   border-radius: 100%
 }
-p{
+
+.p{
   font-size: 14px;
   margin: 5px;
   display: flex;
   flex-direction: column;
-  width: 11rem;
+  width: 12rem;
+}
+
+.clockIcon{
+  font-size: 26px;
 }
