--- a/burgerQueen/src/app/cocinero/pedidos-cocinero/pedidos-cocinero.component.html
+++ b/burgerQueen/src/app/cocinero/pedidos-cocinero/pedidos-cocinero.component.html
@@ -17,7 +17,8 @@
             </div>
           </td>
           <td>
-            <span><i class="fa-solid fa-clock clockIcon"></i></span>
+            <span><i class="fa-solid fa-clock clockIcon" [ngClass]="{'preparado':pedido.prepared ,'no-preparado':!pedido.prepared}" 
+              (click)="changeToPrepared(pedido)"></i></span>  
           </td>
         </tr>
       </table>
