Arreglando visualización de los íconos en la vista de Carta

--- a/burgerQueen/src/app/cocinero/pedidos-cocinero/pedidos-cocinero.component.html
+++ b/burgerQueen/src/app/cocinero/pedidos-cocinero/pedidos-cocinero.component.html
@@ -17,7 +17,7 @@
             </div>
           </td>
           <td>
-            <span><i class="fa-solid fa-clock clockIcon" [ngClass]="{'preparado':pedido.prepared ,'no-preparado':!pedido.prepared}" 
+            <span><i class="fa-solid fa-clock clockIcon" [ngClass]="{'preparado':pedido.onePrepared ,'no-preparado':!pedido.onePrepared}" 
               (click)="changeToPrepared(pedido)"></i></span>  
           </td>
         </tr>
