Confirmación para inicio de sesión y limpiado de localStorage al cerrar sesión

--- a/burgerQueen/src/app/shared/navegador/navegador.component.html
+++ b/burgerQueen/src/app/shared/navegador/navegador.component.html
@@ -4,5 +4,5 @@
     <i class="fa-solid fa-utensils" *ngIf="(rolUser == 'Mesero' || rolUser == 'Administrador')" (click)="cartaRout()"></i>
     <i class="fa-solid fa-receipt" (click)="pedidoRout()"></i>
     <i class="fa-solid fa-list-check" (click)="totalPedidosRout()"></i>
-    <i class="fa-solid fa-right-from-bracket" (click)="onLogout()"></i>
+    <i class="fa-solid fa-right-from-bracket" (click)="confirmLogout()"></i>
 </div>
