--- a/burgerQueen/src/app/shared/datos-pedido/datos-pedido.component.html
+++ b/burgerQueen/src/app/shared/datos-pedido/datos-pedido.component.html
@@ -14,7 +14,7 @@
   </div>
     <ng-template #fixTime >
       <!--Estos datos se guardan en firestore (para capturar la hora exacta)-->
-      <p>{{ order.date }} - {{ order.inputHour }}</p>
+      <p>Datos del cliente</p>
     </ng-template>
   </div>
 
@@ -64,11 +64,7 @@
   *ngIf="rolUser !== 'Cocinero'; else otherBtn" routerLinkActive="activebutton" >Enviar Orden</button>
 
   <ng-template #otherBtn>
-<<<<<<< HEAD
-    <button type="button" class="btnEnviarOrden" routerLink="/totalPedidos" routerLinkActive="activebutton">Orden Lista</button>
-=======
     <button class="btnEnviarOrden" (click)="markAsPrepared(order)">Orden Lista</button>
->>>>>>> c4fe299d328f5bf5c834ea4867ca21639e6b0078
   </ng-template>
 
 </form>
