--- a/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.scss
+++ b/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.scss
@@ -1,13 +1,11 @@
 $color-melon: #f1d5bb;
 $color-marron: #3B2213;
-$color-blanco: #ffffff;
 $color-pink: #FF8087;
 $color-gris-ligth:#eee;
 $color-gris:#303438;
 $color-naranja:#FB7614;
 $color-green: #31C248;
 $color-primary: #64b6e6;
-$color-darkred: #8B0000;
 
 #totalPedidosView{
   display: flex;
@@ -69,7 +67,7 @@ $color-darkred: #8B0000;
 table{
   align-self: flex-start;
   border-collapse: collapse;
-  border: 1px solid $color-gris-ligth;
+  // border: 1px solid $color-gris-ligth;
   font-family: 'Mulish', sans-serif;
   width: 95%;
 }
@@ -124,13 +122,13 @@ i{
   content: "\2713";
   background-color: $color-naranja;
   text-align: center;
-  color: $color-blanco;
+  color: white;
   font-weight:500;
 }
 .no-ordenado{
   content: " ";
-  background-color: $color-blanco;
-  color: $color-blanco;
+  background-color: rgb(250, 250, 250);
+  color: white;
 }
 
 .preparado, .no-preparado{
@@ -144,13 +142,13 @@ i{
   content: "\2713";
   background-color: $color-green;
   text-align: center;
-  color: $color-blanco;
+  color: white;
   font-weight:500;
 }
 .no-preparado{
   content: " ";
-  background-color: $color-blanco;
-  color: $color-blanco;
+  background-color: white;
+  color: white;
 }
 
 .entregado{
@@ -159,7 +157,7 @@ i{
   border: 2px solid $color-primary;
   padding: 5px;
   text-align: center;
-  background-color: $color-blanco;
+  background-color: white;
   text-align: center;
   color: $color-primary;
   font-weight:500;
@@ -169,9 +167,9 @@ i{
   border-radius: 100%;
   border: 2px solid $color-primary;
   padding: 5px;
-  background-color: $color-blanco;
+  background-color: white;
   text-align: center;
-  color: $color-blanco;
+  color: white;
   cursor: pointer;
 }
 
@@ -180,47 +178,38 @@ i{
 /*OPTIONS BTNS*/
 
 .btnOpciones{
-  display: flex;
-  justify-content: center;
-  gap: 0.5rem;
+  width: 100%;
 
   input{
-    font-size: 13px;
+    padding: 0.5rem;
+    border-radius:0.5rem;
     width: 6em;
-    border-radius: 0.5rem;
-    padding: 8px;
+    margin: 0 0.3em;
   }
 }
-input[value="Pagar"]:hover{
-   background-color: $color-pink;
-   color: $color-blanco;
+
+input[value="Ver pedido"]{
+  border: none;
+  color: white;
+  background-color: $color-marron;
 }
 
 .cancelado{
   border:1px solid $color-pink;
-  border-radius:0.5rem;
-  padding: 5px;
   cursor: not-allowed;
-  background-color: $color-darkred;
+  background-color: $color-pink;
   pointer-events: none;
-  color: #eee;
-
- 
+  color: white;
 }
 .no-cancelado{
+  background-color: white;
   border:1px solid $color-pink;
-  border-radius:0.5rem;
-  padding: 5px;
-  color: $color-pink;
   cursor: pointer;
-  background-color: $color-blanco;
   color: $color-pink;
 }
-input[value="Ver pedido"]{
-  border: none;
-  border-radius:0.5rem;
-  color: $color-blanco;
-  background-color: $color-marron;
-  padding: 0.5rem;
-  cursor: pointer;
+
+@media (min-width: 900px) {
+  .btnOpciones{
+    width: auto;
+  }
 }
