--- a/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.html
+++ b/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.html
@@ -41,7 +41,7 @@
           </thead>
           
           <tbody>
-            <tr *ngFor="let order of orders">
+            <tr *ngFor="let order of completeOrderList">
               <td>{{ order.tableNumber }}</td>
               <td>{{ order.clientName }}</td>
               <td>{{ order.total | currency:'PEN':'S/'}}</td>
