--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -4,11 +4,11 @@
     <h4>Inicia Sesión</h4>
     <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin" [(ngModel)]="usuario.email">
     <div class="eye">
-      <span class='iconEye' (click)="seePass()"><i class="fas fa-eye-slash"></i></span>
+      <span class='iconEye' (click)="seePassword()"><i class="fas fa-eye-slash"></i></span>
       <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin" [(ngModel)]="usuario.password">
     </div>
 
-    <a class="forgetPassword" (click)="resetPass()">Olvide mi contraseña</a>
-    <input type="submit"  routerLinkActive="activebutton"  value="Ingresar" class="buttonLogin" (click)="ingresar()">
+    <a class="forgetPassword" (click)="resetPassword()">Olvide mi contraseña</a>
+    <input type="submit"  routerLinkActive="activebutton"  value="Ingresar" class="buttonLogin" (click)="login()">
   </div>
 </div> 
