--- a/burgerQueen/src/app/shared/datos-pedido/datos-pedido.component.html
+++ b/burgerQueen/src/app/shared/datos-pedido/datos-pedido.component.html
@@ -7,69 +7,71 @@
 
   <div class="datos">
 
-  <div class="fechaYhora" >
-    <div class="clock" *ngIf="rolUser !== 'Cocinero'; else fixTime">
-      <span> {{fecha}}, {{dia}} </span>     
-      <div class="hours">
+    <div class="fechaYhora">
+      <div class="clock" *ngIf="rolUser !== 'Cocinero'; else fixTime">
+        <span> {{fecha}}, {{dia}} </span>
+        <div class="hours">
           <div class="horas">
-              <span class="mishoras">{{hora}}:{{minutos}}:{{segundos}}</span>
-              <span class="ampm">{{ampm}}</span>
+            <span class="mishoras">{{hora}}:{{minutos}}:{{segundos}}</span>
+            <span class="ampm">{{ampm}}</span>
           </div>
+        </div>
       </div>
-  </div>
-    <ng-template #fixTime >
-      <!--Estos datos se guardan en firestore (para capturar la hora exacta)-->
-      <p>{{ completeOrder.inputHour }} - {{ completeOrder.date }}</p>
-    </ng-template>
-  </div>
+      <ng-template #fixTime>
+        <!--Estos datos se guardan en firestore (para capturar la hora exacta)-->
+        <p>{{ completeOrder.inputHour }} - {{ completeOrder.date }}</p>
+      </ng-template>
+    </div>
 
-  <div class="seccionCliente">
-    <p>Cliente: </p>
+    <div class="seccionCliente">
+      <p>Cliente: </p>
 
-    <input type="text" class="cliente" [formControl]="clientName" *ngIf="rolUser !== 'Cocinero'; else fixClientName">
-    <ng-template #fixClientName >
-      <input type="text" class="cliente" value="{{ completeOrder.clientName }}" disabled>
-    </ng-template>
-  </div>
+      <input type="text" class="cliente" [formControl]="clientName" *ngIf="rolUser !== 'Cocinero'; else fixClientName">
+      <ng-template #fixClientName>
+        <input type="text" class="cliente" value="{{ completeOrder.clientName }}" disabled>
+      </ng-template>
+    </div>
 
-  <div class="seccionMesa">
-    <p>Mesa: </p>
-    <select name="mesa" class="mesa" [(ngModel)]="numberOfTable" (change)="getNumberOfTable()" *ngIf="rolUser !== 'Cocinero'; else fixTableNumber"> 
-      <option disabled >Escoge una mesa</option>
-      <option value="Mesa 1">Mesa 1</option>
-      <option value="Mesa 2">Mesa 2</option>
-      <option value="Mesa 3">Mesa 3</option>
-      <option value="Mesa 4">Mesa 4</option>
-      <option value="Mesa 5">Mesa 5</option>
-      <option value="Mesa 6">Mesa 6</option>
-      <option value="Mesa 7">Mesa 7</option>
-      <option value="Mesa 8">Mesa 8</option>
-      <option value="Mesa 9">Mesa 9</option>
-      <option value="Mesa 10">Mesa 10</option>
-      <option value="Mesa 11">Mesa 11</option>
-      <option value="Mesa 12">Mesa 12</option>
-    </select>
+    <div class="seccionMesa">
+      <p>Mesa: </p>
+      <select name="mesa" class="mesa" [(ngModel)]="numberOfTable" (change)="getNumberOfTable()"
+        *ngIf="rolUser !== 'Cocinero'; else fixTableNumber">
+        <option disabled>Escoge una mesa</option>
+        <option value="Mesa 1">Mesa 1</option>
+        <option value="Mesa 2">Mesa 2</option>
+        <option value="Mesa 3">Mesa 3</option>
+        <option value="Mesa 4">Mesa 4</option>
+        <option value="Mesa 5">Mesa 5</option>
+        <option value="Mesa 6">Mesa 6</option>
+        <option value="Mesa 7">Mesa 7</option>
+        <option value="Mesa 8">Mesa 8</option>
+        <option value="Mesa 9">Mesa 9</option>
+        <option value="Mesa 10">Mesa 10</option>
+        <option value="Mesa 11">Mesa 11</option>
+        <option value="Mesa 12">Mesa 12</option>
+      </select>
 
-    <ng-template #fixTableNumber >
-      <input type="text" class="cliente" value="{{ completeOrder.tableNumber }}" disabled>
-    </ng-template>
-  </div>
+      <ng-template #fixTableNumber>
+        <input type="text" class="cliente" value="{{ completeOrder.tableNumber }}" disabled>
+      </ng-template>
+    </div>
 
   </div>
 
   <div class="costoPedido">
     <p>Total</p>
     <p class="precio" *ngIf="rolUser !== 'Cocinero'; else fixTotal">{{ orderTotal | currency:'PEN':'S/' }}</p>
-    <ng-template #fixTotal >
+    <ng-template #fixTotal>
       <p class="precio">{{ completeOrder.total | currency:'PEN':'S/' }}</p>
     </ng-template>
   </div>
 
-  <button type="button" class="btnEnviarOrden" (click)="sendClientData()" routerLink="/totalPedidosMesero" 
-  *ngIf="rolUser !== 'Cocinero'; else otherBtn" routerLinkActive="activebutton" >Enviar Orden</button>
+  <button type="button" class="btnEnviarOrden" (click)="sendClientData()" routerLink="/totalPedidosMesero"
+    *ngIf="rolUser !== 'Cocinero'; else otherBtn" routerLinkActive="activebutton">Enviar Orden</button>
 
   <ng-template #otherBtn>
-    <button class="btnEnviarOrden" (click)="markAsPrepared(completeOrder)" [hidden]="completeOrder.preparationTime">Orden Lista</button>
+    <button class="btnEnviarOrden" (click)="markAsPrepared(completeOrder)"
+      [hidden]="completeOrder.preparationTime">Orden Lista</button>
   </ng-template>
 
 </form>
