--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
@@ -7,22 +7,22 @@
         <hr>
       </div>
       <table class="listaPedidos">
-        <tr *ngFor="let pedido of pedidosMesero">
-          <td><button key=index; (click)="orderDelete(pedido)">x</button></td>
-          <td><img src="{{pedido.img}}"></td>
+        <tr *ngFor="let oneOrder of orderList">
+          <td><button key=index; (click)="orderDelete(oneOrder)">x</button></td>
+          <td><img src="{{oneOrder.img}}"></td>
           <td>
             <div class="p">
-              <p>{{ pedido.name }}</p>
-              <P>{{pedido.price | currency:'PEN':'S/'}}</P>
+              <p>{{ oneOrder.name }}</p>
+              <P>{{oneOrder.price | currency:'PEN':'S/'}}</P>
             </div>
           </td>
           <td>
             <div class="divBtn">
-              <button (click)="downQuantity(pedido)">-</button>
-              <input type="number" value="{{ pedido.quantity }}" id="{{ pedido.id }}">
-              <button (click)="upQuantity(pedido)">+</button>
+              <button (click)="downQuantity(oneOrder)">-</button>
+              <input type="number" value="{{ oneOrder.quantity }}" id="{{ oneOrder.id }}">
+              <button (click)="upQuantity(oneOrder)">+</button>
             </div>
-            <h4 class="subtotal">{{ pedido.subtotal | currency:'PEN':'S/' }}</h4>
+            <h4 class="subtotal">{{ oneOrder.subtotal | currency:'PEN':'S/' }}</h4>
           </td>
         </tr>
       </table>
