errores dek test

--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
@@ -1,4 +1,7 @@
-<div class="containerGestionUsuarios">
+<div *ngIf="rolUser !== 'Admistrador'">
+  <p>No pueden ingresar</p>
+</div>
+<div class="containerGestionUsuarios" *ngIf="rolUser == 'Administrador'" >
   <app-navegador></app-navegador>
   <div class="gestionUsuarios">
     <h2 class="titulo">TRABAJADORES</h2>
